<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alRichMessageView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/messageTextLayout"
    android:layout_marginStart="52dp"
    android:layout_marginLeft="52dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:gravity="start"
    android:orientation="vertical"
    android:visibility="gone">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alGenericCardContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--Video Template -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videoTemplateContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alImageListContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alFormLayoutRecycler"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/km_rich_message_border" />

    <io.kommunicate.ui.conversation.richmessaging.views.KmFlowLayout
        android:id="@+id/kmFlowLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:alignSenderSide="false" />

    <include layout="@layout/km_faq_layout" />

    <include layout="@layout/km_faq_reply_layout" />

    <LinearLayout
        android:id="@+id/alListMessageLayout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/km_rich_message_border"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/headerText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/km_header_text_background"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="3sp"
            android:paddingStart="9dp"
            android:paddingLeft="9dp"
            android:paddingTop="7dp"
            android:paddingEnd="9dp"
            android:paddingRight="9dp"
            android:paddingBottom="7dp"
            android:text=""
            android:textColor="@color/km_list_item_main_header_text_color"
            android:textSize="14sp"
            android:textStyle="normal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alListItemRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alActionButtonRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <TextView
        android:id="@+id/createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="6dp"
        android:text="time"
        android:textColor="@color/km_received_message_created_at_time_text_color"
        android:textSize="10sp" />
</LinearLayout>