<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/km_list_item_divider_color" />

    <ImageView
        android:id="@+id/listItemImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/listItemHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/listItemImage"
        android:layout_toRightOf="@+id/listItemImage"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.07"
        android:text=""
        android:textColor="@color/km_list_item_header_text_color"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/listItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listItemHeaderText"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="11dp"
        android:layout_toEndOf="@+id/listItemImage"
        android:layout_toRightOf="@+id/listItemImage"
        android:ellipsize="end"
        android:letterSpacing="0.04"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/km_list_item_text_color"
        android:textSize="14sp" />
</RelativeLayout>