<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:orientation="vertical"
    android:padding="6dp">

    <FrameLayout
        android:id="@+id/video_view_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.media3.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone"/>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/web_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:scrollbars="none" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:maxLines="3"
        android:text=""
        android:visibility="visible" />
</LinearLayout>